<resources>
    <string name="app_name">Sales Tracker App</string>
    <string name="image_icon">image_icon</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_item">Add Item</string>
    <string name="customer">Customer</string>
    <string name="select_customer">Select Customer</string>
    <string name="add_item_button">Add Item</string>
    <string name="quantity">Quantity :</string>
    <string name="decrease_button">decrease_button</string>
    <string name="add_button">add_button</string>
    <string name="amount">Amount :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="select_item">Select Item</string>
    <string name="items">Product Name</string>
    <string name="npr">"NPR. "</string>
    <string name="buy">Buy</string>
    <string name="add">Add</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_btn_img">back_btn_img</string>
    <string name="total_sale">Total Sale</string>
    <string name="this_month">Current Month</string>
    <string name="daily">Current Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_btn">Add</string>
    <string name="current_day_report">Current Day Report</string>
    <string name="current_month_report">Current Month Report</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="remove">Remove</string>
    <string name="submit">Submit</string>
    <string name="add_item_list">Added Item List</string>
    <string name="save">Save</string>
    <string name="no_data_found">No Data Found</string>
    <string name="sales_tracker">Sales Tracker</string>
</resources>