<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".addItems.AddItemsActivity">

        <include
            android:id="@+id/toolbarId"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/customerLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_below="@+id/toolbarId"
            android:orientation="horizontal">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customerRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                android:layout_weight="1"
                android:visibility="gone"
                tools:listitem="@layout/customer_row" />

            <TextView
                android:id="@+id/addCustomerTV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/round_corner_border"
                android:padding="10dp"
                android:text="Add \nCustomer" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerLayout"
            android:layout_margin="10dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/customerET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_background_drawable"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_customer_name"
                android:padding="10dp"
                android:editable="false"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/addNewItemTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerET"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="Add New Items"
                android:textColor="@color/black"
                android:textSize="22sp" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/addedItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topView"
            android:layout_marginTop="-5dp"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/addItemLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/addProductRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/itemDetailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addedItemLayout"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:text="Snacks" />

                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:text="3-9-2024" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/quantityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/decreaseQuantity"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/quantityTV"
                    android:background="@drawable/button_drawable"
                    android:contentDescription="@string/decrease_button"
                    android:src="@drawable/negative_button_icon"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/quantityCountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/decreaseQuantity"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/addQuantityIV"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/quantityCountTV"
                    android:background="@drawable/button_drawable"
                    android:contentDescription="@string/add_button"
                    android:src="@drawable/add_button_icon"
                    app:tint="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/amountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/amountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@+id/amount"
                    android:textColor="@color/colorGreen"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="NPR. 20" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/total_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/totalAmountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@+id/totalAmount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="NPR. 20" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:id="@+id/addItemBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/add_item_button"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:layout_toStartOf="@+id/addItemFAB"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/save"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addItemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="24dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/add_button_icon" />

    </RelativeLayout>
</layout>