<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.MainActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/salesDetailView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/dashboard_top_view">

                <RelativeLayout
                    android:id="@+id/profileView"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/back_btn_img"
                        android:padding="5dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_arrow_back" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp">

                        <LinearLayout
                            android:id="@+id/userDetailView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/greetingTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:textColor="@color/colorWhite"
                                android:textSize="12sp"
                                tools:text="Welcome" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="Ram"
                                android:textColor="@color/colorWhite"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/userDetailView"
                            android:src="@drawable/profile_image" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/saleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profileView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sales_tracker"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/priceView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/salesDetailView"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/totalMonthPriceView"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:elevation="2dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/this_month"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/currentMonthTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="NPR. 0"
                            android:textColor="@color/colorGray"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/totalDayPriceView"
                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@+id/totalMonthPriceView"
                    android:elevation="2dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/daily"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/todayTotalAmountTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="NPR. 0"
                            android:textColor="@color/colorGray"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/tabView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/priceView"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp">
                <LinearLayout
                    android:id="@+id/tabRootView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_with_color_primary"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/dailyBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_with_color_primary"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginEnd="3dp"
                        android:text="@string/current_day_report"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/thisMonthBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_with_color_primary"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/current_month_report"
                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

            <FrameLayout
                android:layout_below="@+id/tabView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/frameLayout"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/addFloatingBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/floating_btn_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/add_btn" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>