<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/colorWhite">

        <LinearLayout
            android:id="@+id/itemDetailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            android:visibility="visible">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    tools:text="Rahul singh" />

                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    tools:text="3-9-2024" />

            </RelativeLayout>

            <TextView
                android:id="@+id/productNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                tools:text="Snacks" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/quantityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/quantityCountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/quantityTV"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    tools:text="1" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/total_amount"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/totalAmountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toEndOf="@+id/totalAmount"
                    android:textColor="@color/colorGray"
                    android:textSize="14sp"
                    tools:text="NPR. 20" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:elevation="2dp"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:id="@+id/removeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/remove" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>